--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ cache:
 env:
   - LSB_RELEASE=trusty DOCKER_CACHE_FILE=/home/travis/docker/trusty-cache.tar.gz
   - LSB_RELEASE=cmake.trusty DOCKER_CACHE_FILE=/home/travis/docker/cmake.trusty-cache.tar.gz
+  - LSB_RELEASE=cmake.bionic DOCKER_CACHE_FILE=/home/travis/docker/cmake.bionic-cache.tar.gz
 
 before_install: scripts/load_docker_cache.sh
 
